[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xingAsync"
version = "0.0.4"
authors = [
  { name="teranum", email="teranum@gmail.com" },
]
description = "package for async XingApi(dll)"
keywords = ["xingapi"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pywin32",
  "qasync",
]
