[build-system]
requires = ["hatchling==1.26.3"]
build-backend = "hatchling.build"

[project]
name = "xingAsync"
version = "0.3.1"
authors = [
  { name="teranum", email="teranum@gmail.com" },
]
description = "package for XingApi(DLL,COM)"
keywords = ["xingapi"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pywin32",
]
[project.urls]
Homepage = "https://github.com/teranum/ls-dev/tree/master/xingAsync"
